update pdf export

--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
         "@babel/preset-react": "7.0.0",
         "@coreui/icons": "^3.0.1",
         "@hotwired/stimulus": "^3.0.0",
+        "@popperjs/core": "^2.11.8",
         "@primer/css": "^21.0.9",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
         "@symfony/webpack-encore": "^4.0.0",
+        "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.11.1",
         "clsx": "^2.0.0",
         "core-js": "^3.23.0",
         "datatables.net-dt": "^1.13.6",
         "datatables.net-responsive-dt": "^2.5.0",
+        "jquery": "^3.7.1",
         "react": "^18.0",
         "react-dom": "^18.0",
         "regenerator-runtime": "^0.13.9",
