--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "core-js": "^3.23.0",
         "datatables.net-dt": "^1.13.6",
         "datatables.net-responsive-dt": "^2.5.0",
+        "file-loader": "6.0.0",
         "jquery": "^3.7.1",
         "react": "^18.0",
         "react-dom": "^18.0",
