--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
         "bootstrap-icons": "^1.11.1",
         "clsx": "^2.0.0",
         "core-js": "^3.23.0",
+        "datatables.net-buttons-dt": "^2.4.2",
         "datatables.net-dt": "^1.13.6",
         "datatables.net-responsive-dt": "^2.5.0",
+        "datatables.net-rowgroup-dt": "^1.4.1",
         "file-loader": "6.0.0",
         "jquery": "^3.7.1",
+        "jszip": "^3.10.1",
         "react": "^18.0",
         "react-dom": "^18.0",
         "regenerator-runtime": "^0.13.9",
