--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "symfony/web-link": "6.3.*",
         "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "6.3.*",
+        "tecnickcom/tcpdf": "^6.6",
         "twig/extra-bundle": "^3.7",
         "twig/twig": "^2.12|^3.0"
     },
