--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "datatables.net-dt": "^1.13.6",
         "datatables.net-responsive-dt": "^2.5.0",
         "datatables.net-rowgroup-dt": "^1.4.1",
-        "file-loader": "6.0.0",
+        "file-loader": "^6.0.0",
         "jquery": "^3.7.1",
         "jszip": "^3.10.1",
         "react": "^18.0",
